fix border radius on mobile and desktop size

--- a/css/main.scss
+++ b/css/main.scss
@@ -95,7 +95,6 @@ body  {
 
   &-2 {
     padding: 1.5rem;
-    border-bottom-left-radius: 0.5rem;
     background-color: $easternBlue;
     color: $white;
   
@@ -156,7 +155,7 @@ body  {
   &-3 {
     position: relative;
     padding: 1.5rem;
-    border-bottom-right-radius: 0.5rem;
+    border-radius: 0 0 0.5rem 0.5rem;
     background-color: $easternBlue;
     color: $white;
   
@@ -214,9 +213,11 @@ body  {
     }
     .card-2 {
       padding: 2.5rem;
+      border-bottom-left-radius: 0.5rem;
     }
     .card-3 {
       padding: 2.5rem;
+      border-bottom-left-radius: 0;
     }
 }
 
